--- a/index.html
+++ b/index.html
@@ -1892,9 +1892,9 @@ var pJS = function (e, a) {
           <div class="card">
                <div class="sidebar" id="sidebar">
                     <a class="active" href="#" target="_blank">Github</a>
-                    <a class="active" href="#" target="_blank">Instagram</a>
-                    <a class="active" href="#" target="_blank">YouTube</a>
-                    <a class="active" href="https://telegram.dog/Lvxky" target="_blank">Telegram</a>
+                    <a class="active" href="https://www.instagram.com/shawaz_malik04?igsh=MzRlODBiNWFlZA==" target="_blank">Instagram</a>
+                    <a class="active" href="https://youtube.com/@fujogamingofficial?si=nUedgFSOaHgYoPVm" target="_blank">YouTube</a>
+                    <a class="active" href="https://t.me/king_Junaid" target="_blank">Telegram</a>
                </div>
                <div class="header" onclick="toggle()">
                     <label for="check" class="checkbtn" id="chkbtn">
@@ -1912,38 +1912,38 @@ var pJS = function (e, a) {
                               </div>
                          </div>
                          <h3 class="name"></h3>
-                         <h3 class="sub-name">• 𝗟𝗨𝗖𝗞𝗬 𝗫𝗗 •</h3>
+                         <h3 class="sub-name">• 𝘼𝙧𝙨𝙝 𝙟𝙪𝙣𝙖𝙞𝙙 •</h3>
                     </div>
                </div>
 
                <div class="content">
                     <div class="left">
                          <div class="about-container">
-                              <h3 class="title">About</h3>
-                              <p class="text">✦ Cʟᴧss: XI | Sᴄʜᴏᴏʟ: IDK ✦</p>
-                              <p class="text">~ Dᴇᴠ ~</p>
-                              <p class="text">• Pʏᴛʜᴏɴ | JᴧᴠᴧSᴄʀɪᴘᴛ | Hᴛᴍʟ | Css •</p>
+                              <h3 class="title">𝑨𝒃𝒐𝒖𝒕</h3>
+                              <p class="text">✦ Neet aspirant ✦</p>
+                              <p class="text">~ Dᴇᴠeloper bhe hu  ~</p>
+                              <p class="text">• Everyone else was taken so this is me •</p>
                          </div>
                          <div class="icons-container">
                               <a href="#" class="icon">
                                    <i class="fa-brands fa-github"></i>
                               </a>
-                              <a href="#" class="icon">
+                              <a href="https://www.instagram.com/shawaz_malik04?igsh=MzRlODBiNWFlZA==" class="icon">
                                    <i class="fa-brands fa-instagram"></i>
                               </a>
-                              <a href="https://telegram.dog/Lvxky" class="icon">
+                              <a href="https://t.me/king_Junaid" class="icon">
                                    <i class="fa-brands fa-telegram"></i>
                               </a>
-                              <a href="#" class="icon">
+                              <a href="https://youtube.com/@fujogamingofficial?si=nUedgFSOaHgYoPVm" class="icon">
                                    <i class="fa-brands fa-youtube"></i>
                               </a>
                          </div>
                          <div class="buttons-wrap">
                               <div class="follow-wrap">
-                                   <a href="#" class="follow">Follow</a>
+                                   <a href="https://t.me/king_Junaid" class="follow">Follow</a>
                               </div>
                               <div class="share-wrap">
-                                   <a href="https://telegram.dog/Lvxky" class="share">Contact</a>
+                                   <a href="https://t.me/king_Junaid" class="share">Contact</a>
                               </div>
                          </div>
                     </div>
